--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,19 +9,19 @@ body { margin: 0px; }
   user-select: none;
   font-family: Arial, Helvetica, sans-serif;
 
-  @media (max-height: 800px) { padding: 0px 15px; }
+  @media (max-height: 820px) { padding: 0px 15px; }
 
   h1 {
     font-size: 3rem;
     text-align: center;
     margin: 15px auto;
 
-    @media (max-height: 800px) {
+    @media (max-height: 820px) {
       font-size: 2.75rem;
       margin: 0px auto 10px auto;
     }
 
-    @media (max-height: 650px) {
+    @media (max-height: 680px) {
       font-size: 2.25rem;
       margin: 0px auto 10px auto;
     }
@@ -44,8 +44,8 @@ body { margin: 0px; }
     border-style: solid;
     border-color: transparent;
 
-    @media (max-height: 800px) { padding-top: 0px; }
-    @media (max-height: 700px) { padding-bottom: 5px; }
+    @media (max-height: 820px) { padding-top: 0px; }
+    @media (max-height: 730px) { padding-bottom: 5px; }
   }
 }
 
@@ -60,7 +60,7 @@ body { margin: 0px; }
   border-radius: 10px;
   font-weight: bold;
 
-  @media (max-height: 700px) {
+  @media (max-height: 730px) {
     margin: 0px auto 10px auto;
     padding: 10px 0px;
   }
@@ -87,23 +87,33 @@ body { margin: 0px; }
     border-width: 0px;
     border-radius: 25px;
   
-    @media (max-height: 800px) { 
+    @media (max-height: 820px) { 
       margin: 10px auto;
       padding: 10px 0px;
     }
 
-    @media (max-height: 650px) {
+    @media (max-height: 680px) {
       width: 45%;
       font-size: 0.9rem;
     }
   }
 
-  @media (max-height: 650px) {
+  @media (max-height: 680px) {
     padding-top: 15px;
 
     #restart-game-btn { order: 2; }
     #reset-scoreboard-btn { order: 1 }
   }
 
-  @media (max-height: 600px) { padding-top: 5px; }
+  @media (max-height: 630px) { padding-top: 5px; }
+}
+
+.footer {
+  display: flex;
+  width: fit-content;
+  align-self: flex-end;
+
+  .image-btn {
+    margin: 0px 5px;
+  }
 }
